cmake_minimum_required(VERSION 2.8)
project(sample)
find_package(GLEW REQUIRED)
find_package(PkgConfig REQUIRED)
pkg_search_module(GLFW REQUIRED glfw3)
include_directories(${GLEW_INCLUDE_DIRS} ${GLFW_INCLUDE_DIRS})
link_directories(${GLFW_LIBDIR})
add_executable(helloworld main.cpp)
target_link_libraries(helloworld ${GLEW_LIBRARIES} ${GLFW_STATIC_LIBRARIES}) 
